Smoke renders as transparent in OpenGL render #37834

Closed
opened 2013-12-16 21:05:42 +01:00 by gandalf3 · 19 comments
Member

System Information
Archlinux
Nvidia 7900GT

Blender Version
Broken: Blender 2.69 Release (from arch repos)

Short description of error
Smoke appears transparent when rendered with the OpenGL render.

Exact steps for others to reproduce the error
Based on opengl_smoke.blend

  1. Simulate the smoke
  2. Render with the openGL render
  3. Smoke is rendered as transparency
**System Information** Archlinux Nvidia 7900GT **Blender Version** Broken: Blender 2.69 Release (from arch repos) **Short description of error** Smoke appears transparent when rendered with the OpenGL render. **Exact steps for others to reproduce the error** Based on [opengl_smoke.blend](https://archive.blender.org/developer/F42191/opengl_smoke.blend) 1. Simulate the smoke 2. Render with the openGL render 3. Smoke is rendered as transparency
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @gandalf3

Added subscriber: @gandalf3

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

I cannot confirm this on Windows 7 x64 with Geforce 540M, both the smoke sim and the OpenGL render look fine.

Also looks fine on Mac OS X 10.9 with Intel Iris Pro.

I cannot confirm this on Windows 7 x64 with Geforce 540M, both the smoke sim and the OpenGL render look fine. Also looks fine on Mac OS X 10.9 with Intel Iris Pro.
Author
Member

Here's a related post blender stack exchange .

Tested with an official blender.org build, still happens.

Here's a [related post blender stack exchange ](http://blender.stackexchange.com/q/5579/599). Tested with an official blender.org build, still happens.

Added subscriber: @sambler

Added subscriber: @sambler

I'm on FreeBSD -

While a smoke only sim renders fine, when the inflow is set to fire or fire & smoke it shows up as transparent in an opengl rendering. Be sure to update the cache or bake after changing inflow type.

Maybe this is *nix opengl issue.

I'm on FreeBSD - While a smoke only sim renders fine, when the inflow is set to fire or fire & smoke it shows up as transparent in an opengl rendering. Be sure to update the cache or bake after changing inflow type. Maybe this is *nix opengl issue.

This began in 2.67 - 2.66 did not exhibit this issue.

Looking more at this, what is happening is that the fire is cutting the alpha channel through the entire opengl render even the background. Like it's using the fire for a mask. The full colour exists in the rgb only display.

What I see is this

Steps -

  • Load Factory defaults
  • select cube and apply quick smoke
  • select original cube and change smoke inflow to fire
  • click opengl render
This began in 2.67 - 2.66 did not exhibit this issue. Looking more at this, what is happening is that the fire is cutting the alpha channel through the entire opengl render even the background. Like it's using the fire for a mask. The full colour exists in the rgb only display. What I see [is this ](http://www.pasteall.org/pic/show.php?id=64111) Steps - - Load Factory defaults - select cube and apply quick smoke - select original cube and change smoke inflow to fire - click opengl render
Author
Member

Tested with different settings on arch.

Setup steps are the same as @sambler's:

  1. Load factory settings
  2. Apply Quick smoke on cube
  3. Simulate to frame 30

With the flow cube set to smoke I see this:examp10.png

For Fire+Smoke I get:examp11.png

And for only Fire I get:examp12.png

So it seems fire is okay, only smoke is rendered transparent.

In addition to sambler's note about masking anything behind the smoke, it even seems to mask object in front of it:

Tested with different settings on arch. Setup steps are the same as @sambler's: 1. Load factory settings 2. Apply *Quick smoke* on cube 3. Simulate to frame 30 With the flow cube set to *smoke* I see this:![examp10.png](https://archive.blender.org/developer/F42811/examp10.png) For *Fire+Smoke* I get:![examp11.png](https://archive.blender.org/developer/F42820/examp11.png) And for only *Fire* I get:![examp12.png](https://archive.blender.org/developer/F42822/examp12.png) So it seems fire is okay, only smoke is rendered transparent. In addition to sambler's note about masking anything behind the smoke, it even seems to mask object in front of it:

Added subscriber: @Paul.Brachmann

Added subscriber: @Paul.Brachmann

My system: Windows 7 Profesional x64, nVidia Geforce GTX 660

With the attatched file everything works fine.
Just when using fire or fire+smoke it renders some parts as transparent.

Smoke:
smoke.png

Fire:
fire.png

Fire+Smoke:
fire_smoke.png

I also noticed that the domain renders (if you set alpha to transparent) not transparent as it should. Instead it renders as a big black box:
domain_render.png

My system: Windows 7 Profesional x64, nVidia Geforce GTX 660 With the attatched file everything works fine. Just when using fire or fire+smoke it renders some parts as transparent. Smoke: ![smoke.png](https://archive.blender.org/developer/F43292/smoke.png) Fire: ![fire.png](https://archive.blender.org/developer/F43294/fire.png) Fire+Smoke: ![fire_smoke.png](https://archive.blender.org/developer/F43297/fire_smoke.png) I also noticed that the domain renders (if you set alpha to transparent) not transparent as it should. Instead it renders as a big black box: ![domain_render.png](https://archive.blender.org/developer/F43306/domain_render.png)

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Viewport rendering is convenient and using alpha can work too, but drawing volumetrics with correct alpha for opengl render is just not supported and its not needed for using smoke in the viewport.

The problem is caused by draw_smoke_volume Using glBlendFunc(GL_SRC_ALPHA, GL_ONE); but from what I can see this is needed to draw smoke correctly.

Closing, this as an unsupported feature.

Viewport rendering is convenient and using alpha can work too, but drawing volumetrics with correct alpha for opengl render is just not supported and its not needed for using smoke in the viewport. The problem is caused by `draw_smoke_volume` Using `glBlendFunc(GL_SRC_ALPHA, GL_ONE);` but from what I can see this is needed to draw smoke correctly. Closing, this as an unsupported feature.

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Campbell Barton self-assigned this 2013-12-18 16:14:16 +01:00

This issue was referenced by blender/blender-addons-contrib@355c699dc6

This issue was referenced by blender/blender-addons-contrib@355c699dc6b6e95ef9305100a62efa7e70ae93ec

This issue was referenced by 355c699dc6

This issue was referenced by 355c699dc6b6e95ef9305100a62efa7e70ae93ec

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'

Added subscriber: @brecht

Added subscriber: @brecht

This is actually reasonably simple to fix, I did this already for transparent faces, now added the same code for smoke as well.

This is actually reasonably simple to fix, I did this already for transparent faces, now added the same code for smoke as well.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37834
No description provided.