Fix T37834: smoke opengl render not delivering correct alpha channel.